--- a/src/l.gutorova/homework_6/Task_2/Task_2.css
+++ b/src/l.gutorova/homework_6/Task_2/Task_2.css
@@ -115,7 +115,26 @@
     height: 30px;
 }
  .text {
-    width: 130px;
+    width: 150px;
     font-size: xx-small;
     font-weight: bold;
+}
+.checkbox .checked, .checkbox-label .unchecked{
+    display: none;
+}
+.checkbox input:checked ~ .checked{
+    display: inline;
+}
+.checkbox input:checked ~ .unchecked{
+    display: none;
+}
+.bottom {
+    display: flex;
+    flex-direction: row;
+}
+.bottom-text {
+    font-size: x-small;
+}
+.checkbox span {
+    font-size: 10px;
 }
