--- a/src/l.gutorova/homework_6/Task_2/Task_2.css
+++ b/src/l.gutorova/homework_6/Task_2/Task_2.css
@@ -108,12 +108,7 @@
     height: 100px;
     margin-top: 28px;
 }
-.new-3 button {
-    background-color: rebeccapurple;
-    color: white;
-    width: 30px;
-    height: 30px;
-}
+
  .text {
     width: 150px;
     font-size: xx-small;
@@ -131,10 +126,30 @@
 .bottom {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+}
+.checkbox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 .bottom-text {
-    font-size: x-small;
+    font-size: 11px;
+    margin-left: 5px;
+    margin-right: 28px;
 }
 .checkbox span {
-    font-size: 10px;
+    font-size: 14px;
+    color: #008000c7;
+}
+.new-3 button {
+    background-color: #eb4337;
+    color: white;
+    width: 90px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-size: 8px;
 }
