--- a/src/l.gutorova/homework_7/Task_1.css
+++ b/src/l.gutorova/homework_7/Task_1.css
@@ -1,13 +1,14 @@
 .common {
-    width: 50vw;
-    height: 80vh;
+    width: 40vw;
     margin-left: 50%;
     transform: translateX(-50%);
     background-color: gray;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(19%, 1fr));
-    grid-template-rows: repeat(auto-fill, 24%);
+    grid-template-columns: repeat(auto-fill, 100px);
+    grid-template-rows: repeat(4, 100px);
     grid-gap: 1%;  
+    justify-content: center;
+   
 }
 * {
     box-sizing: border-box;
@@ -16,5 +17,11 @@
 .conteiner {
     background-color: white;
     display: grid;
+    grid-column: 1fr 2fr;
+    grid-row: ;
 
+}
+.conteiner  img {
+ width: 30px;
+ height: 30px;
 }
