--- a/src/l.gutorova/homework_7/Task_1.css
+++ b/src/l.gutorova/homework_7/Task_1.css
@@ -13,15 +13,127 @@
 * {
     box-sizing: border-box;
 }
-
+   .conteiner  img {
+       width: 100%;
+       height: 100%;
+   }
 .conteiner {
     background-color: white;
     display: grid;
-    grid-column: 1fr 2fr;
-    grid-row: ;
+    justify-content: center;
+    grid-gap: 2%;
+   
+}
+.grid-1 {
+    grid-template-columns: repeat(3, 30%);
+    grid-template-rows: repeat(3, 31%);
 
 }
-.conteiner  img {
- width: 30px;
- height: 30px;
+.grid-2 {
+    grid-template-columns: repeat(5, 18%);
+    grid-template-rows: repeat(4, 23%);
+}
+.grid-3 {
+    grid-template-columns: repeat(6, 14%);
+    grid-template-rows: repeat(6, 15%);
+}
+.grid-4 {
+    grid-template-columns: repeat(6, 14%);
+    grid-template-rows: repeat(4, 23%);
+}
+.grid-5 {
+    grid-template-columns: repeat(4, 23%);
+    grid-template-rows: repeat(4, 23%);
+}
+.grid-6 {
+    grid-template-columns: repeat(5, 18%);
+    grid-template-rows: repeat(6, 15%);
+}
+.content-1 .cub_2,.content-1 .cub_6{
+    grid-column: 2 /span 2;
+}
+.content-1 .cub_3 {
+    grid-column: 1 /span 2;
+}
+.content-2 .cub_1 {
+    grid-row: 1;
+}
+.content-2 .cub_2{
+    grid-row: 1 /span 2;
+}
+.content-2 .cub_4{
+    grid-row: 2 /span 2;
+}
+.content-2 .cub_5{
+    grid-row: 2 /span 2;
+}
+.content-3 .cub_1{
+    grid-area: 1/1/3/3;
+}
+.content-4 .cub_3 {
+    grid-column: 4/6;
+}
+.content-4 .cub_1, .content-4 .cub_9 {
+    grid-column: 1/3;
+}
+.content-4 .cub_3, .content-4 .cub_11 {
+    grid-column: 4/6;
+}
+.content-4 .cub_5 {
+    grid-area: 2/2/4/5;
+}
+.content-5 .cub_1 {
+    grid-area: 1/1/3/3;
+}
+.content-5 .cub_2 {
+    grid-area: 1/3/3/7;
+}
+.content-5 .cub_3 {
+    grid-area: 3/1/5/3;
+}
+.content-5 .cub_6 {
+    grid-area: 3/5/5/7;
+}
+.content-5 .cub_9 {
+    grid-area: 5/1/7/5;
+}
+.content-5 .cub_10 {
+    grid-area: 5/5/7/7;
+}
+.content-6 .cub_1, .content-8 .cub_1  {
+    grid-area: 1/1/3/7;
+}
+.content-6 .cub_4,.content-8 .cub_4 {
+    grid-column: 1/3;
+}
+
+.content-6 .cub_5, .content-8 .cub_5 {
+    grid-area: 3/3/5/5;
+}
+.content-6 .cub_6 {
+    grid-area: 3/5/5/7;
+}
+.content-7 .cub_1 {
+    grid-area: 1/1/3/4;
+}
+.content-7 .cub_6 {
+    grid-area: 3/2/5/5;
+}
+.content-8 .cub_2 {
+grid-column: 1/3;
+}
+.content-8 .cub_3, .content-8 .cub_6 {
+    grid-column: 5/7;
+}
+.content-9 .cub_1 {
+    grid-area: 1/1/4/3;
+}
+.content-9 .cub_7 {
+    grid-area: 2/3/5/6;
+}
+.content-9 .cub_8 {
+    grid-area: 5/1/7/3;
+}
+.content-9 .cub_9 {
+    grid-area:5/3/7/5;
 }
