--- a/src/l.gutorova/homework_7/Task_1.css
+++ b/src/l.gutorova/homework_7/Task_1.css
@@ -49,6 +49,25 @@
     grid-template-columns: repeat(5, 18%);
     grid-template-rows: repeat(6, 15%);
 }
+.grid-7 {
+    grid-template-columns: repeat(5, 18%);
+    grid-template-rows: repeat(5, 18%);
+}
+.grid-8 {
+    grid-template-columns: repeat(5, 18%);
+}
+.grid-9 {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, 18%);
+}
+.grid-10 {
+    grid-template-columns: repeat(4, 23%);
+    grid-template-rows: repeat(6, 15%);
+}
+.grid-11 {
+    grid-template-columns: repeat(4, 23%);
+    grid-template-rows: repeat(6, 15%);
+}
 .content-1 .cub_2,.content-1 .cub_6{
     grid-column: 2 /span 2;
 }
@@ -136,4 +155,39 @@ grid-column: 1/3;
 }
 .content-9 .cub_9 {
     grid-area:5/3/7/5;
+}
+.content-10 .cub_1 {
+    grid-area: 1/1/3/4;
+}
+.content-10 .cub_4 {
+    grid-area: 1/5/3/7;
+}
+.content-10 .cub_5 {
+    grid-area: 3/1/5/3;
+}
+.content-10 .cub_8 {
+    grid-area: 3/4/5/7;
+}
+.content-10 .cub_9 {
+    grid-area: 5/1/7/4;
+}
+.content-10 .cub_12 {
+    grid-area: 5/5/7/7;
+}
+.content-11 .cub_1 {
+    grid-area: 1/1/5/6;
+}
+.content-12 .cub_3 {
+    grid-column: 3;
+    grid-row: 1/4;
+}
+.content-12 .cub_5 {
+    grid-area: 2/1/4/3;
+}
+.content-12 .cub_8 {
+    grid-column: 1;
+    grid-row: 4/7;
+}
+.content-12 .cub_12 {
+    grid-area: 4/3/7/5;
 }
