--- a/src/l.gutorova/homework_7/Task_1.css
+++ b/src/l.gutorova/homework_7/Task_1.css
@@ -1,12 +1,13 @@
 .common {
-    width: 40vw;
+    width: 42vw;
+    min-height: 67vh;
     margin-left: 50%;
     transform: translateX(-50%);
-    background-color: gray;
+    background-color: #4e4b4b;
     display: grid;
     grid-template-columns: repeat(auto-fill, 100px);
     grid-template-rows: repeat(4, 100px);
-    grid-gap: 1%;  
+    grid-gap: 2%;  
     justify-content: center;
    
 }
@@ -18,15 +19,13 @@
        height: 100%;
    }
 .conteiner {
-    background-color: white;
     display: grid;
     justify-content: center;
     grid-gap: 2%;
-   
 }
 .grid-1 {
     grid-template-columns: repeat(3, 30%);
-    grid-template-rows: repeat(3, 31%);
+    grid-template-rows: repeat(3, 32%);
 
 }
 .grid-2 {
@@ -34,11 +33,11 @@
     grid-template-rows: repeat(4, 23%);
 }
 .grid-3 {
-    grid-template-columns: repeat(6, 14%);
+    grid-template-columns: repeat(6, 15%);
     grid-template-rows: repeat(6, 15%);
 }
 .grid-4 {
-    grid-template-columns: repeat(6, 14%);
+    grid-template-columns: repeat(6, 15%);
     grid-template-rows: repeat(4, 23%);
 }
 .grid-5 {
@@ -65,8 +64,24 @@
     grid-template-rows: repeat(6, 15%);
 }
 .grid-11 {
+    grid-template-columns:  21% 9% 15% 15% 9% 21% ;
+    grid-template-rows: repeat(4, 23%);
+}
+.grid-12 {
+    grid-template-columns:  repeat(4, 23%);
+    grid-template-rows: 32% 32% 15% 15% ;
+}
+.grid-13 {
+    grid-template-columns: 49% 23% 23%;
+    grid-template-rows:repeat(4, 24%);
+}
+.grid-14 {
+    grid-template-columns: repeat(3, 30%);
+    grid-template-rows:32% 15% 15% 32%;
+}
+.grid-15 {
     grid-template-columns: repeat(4, 23%);
-    grid-template-rows: repeat(6, 15%);
+    grid-template-rows: repeat(3, 32%);
 }
 .content-1 .cub_2,.content-1 .cub_6{
     grid-column: 2 /span 2;
@@ -190,4 +205,81 @@ grid-column: 1/3;
 }
 .content-12 .cub_12 {
     grid-area: 4/3/7/5;
+}
+.content-13 .cub_1,.content-13 .cub_8 {
+    grid-column: 1/span 2;
+    
+}
+.content-13 .cub_2,.content-13 .cub_9 {
+    grid-column: 3/span 2;
+    
+}
+.content-13 .cub_3,.content-13 .cub_10 {
+    grid-column: 5/span 2;
+    
+}
+.content-13 .cub_4 {
+    grid-column: 1;
+    grid-row: 2;
+    
+}
+.content-13 .cub_5,
+.content-13 .cub_12, 
+.content-15 .cub_2,
+.content-15 .cub_5
+{
+    grid-column : 2/span 2;
+}
+
+.content-13 .cub_6, .content-13 .cub_13 {
+    grid-column: 4/span 2;
+    
+}
+.content-13 .cub_7, .content-13 .cub_14 {
+    grid-column: 6/span 2;
+    
+}
+.content-13 .cub_11 {
+    grid-column: 1;
+    grid-row: 4;
+}
+.content-14 .cub_1,.content-14 .cub_2 {
+    grid-column: 1/5;
+}
+.content-14 .cub_3, .content-14 .cub_6 {
+    grid-row: 3/5;
+   
+}
+ .content-14 .cub_6 {
+    grid-row: 3/5;
+    grid-column: 3;
+}
+.content-15 .cub_1 {
+    grid-row: 1/5;
+    grid-column: 1;
+}
+
+.content-16 .cub_2 {
+    grid-row: 1/ span 2 ;
+    grid-column: 2;   
+}
+.content-16 .cub_4,
+.content-16 .cub_6 {
+    grid-row: 2/ span 2 ;
+}
+.content-16 .cub_5 {
+    grid-row: 3/ span 2 ;
+    grid-column: 2;   
+}
+.content-17 .cub_1 {
+    grid-area: 1/1/5/5;   
+}
+.content-17 .cub_2 {
+    grid-area: 1/5/3/7;   
+}
+.content-17 .cub_7 {
+    grid-area: 5/1/7/3;   
+}
+.content-17 .cub_12 {
+    grid-area: 5/5/7/7;   
 }
