--- a/src/l.gutorova/homework_7/Task_2.css
+++ b/src/l.gutorova/homework_7/Task_2.css
@@ -1,9 +1,71 @@
+body {
+    font-family: sans-serif;
+    margin: 0;
+}
 .title {
-    height: 20%;
+    height: 124px;
     width: 100vw;
-    background-color: brown;
+}
+.title-top {
+    width: 100%;
+    height: 35%;
+    background-color: rgb(211, 149, 24);
+}
+.title-bottom {
+    width: 100%;
+    height: 65%;
+    display: grid;
+    grid-template: 1fr/ repeat(5, 1fr);
+    box-shadow:0px 2px 12px 0px rgba(0,0,0,0.15);
+    -webkit-box-shadow:0px 2px 12px 0px rgba(0,0,0,0.15);
+    -moz-box-shadow:0px 2px 12px 0px rgba(0,0,0,0.15);
+}
+* {
+    box-sizing: border-box;
+    
+}
+.number {
+    border-radius: 5px 5px 0 0;
 }
 .mounth {
-    height: 30%;
-    background-color: floralwhite;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+.data {
+    text-align: center;
+    font-size: 30px;
+}
+div.number:hover {
+    background-color: #3d34cda6;
+    color: white;
+}
+div.number:not(:hover) .data {
+    color:  #000000ba;
+}
+div.number:not(:hover) .mounth {
+    color:  #808080b3;
+}
+.conteiner {
+    background-color: #8080801f;
+    height: 100vh;
+}
+.content-1 {
+    width: 100%;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items:  flex-end;
+    padding-left: 12px;
+}
+.text {
+    font-size: 14px;
+    color: #000000ba;
+    font-weight: bolder;
+}
+.text-little {
+    font-size: 13px;
+    margin-left: 10px;
+    color: #808080d9;
 }
