--- a/src/l.gutorova/homework_7/Task_2.css
+++ b/src/l.gutorova/homework_7/Task_2.css
@@ -2,23 +2,29 @@ body {
     font-family: sans-serif;
     margin: 0;
 }
+.material-icons {
+    font-family: Material Icons;
+}
 .title {
-    height: 124px;
+    height: 130px;
     width: 100vw;
 }
 .title-top {
     width: 100%;
-    height: 35%;
-    background-color: rgb(211, 149, 24);
+    height: 38%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+   
 }
 .title-bottom {
     width: 100%;
-    height: 65%;
+    height: 62%;
     display: grid;
     grid-template: 1fr/ repeat(5, 1fr);
-    box-shadow:0px 2px 12px 0px rgba(0,0,0,0.15);
-    -webkit-box-shadow:0px 2px 12px 0px rgba(0,0,0,0.15);
-    -moz-box-shadow:0px 2px 12px 0px rgba(0,0,0,0.15);
+    -webkit-box-shadow: 3px 15px 11px -4px rgba(0,0,0,0.11); 
+    box-shadow: 3px 15px 11px -4px rgba(0,0,0,0.11);
 }
 * {
     box-sizing: border-box;
@@ -37,10 +43,20 @@ body {
     text-align: center;
     font-size: 30px;
 }
+.point {
+    background: url(./point.png);
+    background-size: 56%;
+    background-repeat: no-repeat;
+    height: 10px;
+    width: 10px;
+    margin-left: 32px;
+  
+}
 div.number:hover {
     background-color: #3d34cda6;
     color: white;
 }
+
 div.number:not(:hover) .data {
     color:  #000000ba;
 }
@@ -68,4 +84,22 @@ div.number:not(:hover) .mounth {
     font-size: 13px;
     margin-left: 10px;
     color: #808080d9;
+}
+.title-top_mark span{
+    font-size: 27px;
+    color: #000000ba;
+    margin: 10px;
+}
+.title-top_mounth {
+    font-size: 15px;
+    color: #000000ba;
+    font-weight: bold;
+    line-height: 30px;
+    display: flex;
+    flex-direction: row;
+    height: 25px;
+}
+.title-top_mounth span {
+    font-size: 27px;
+    color: #000000ba;
 }
