--- a/src/l.gutorova/homework_7/Task_2.css
+++ b/src/l.gutorova/homework_7/Task_2.css
@@ -33,7 +33,7 @@ body {
 .number {
     border-radius: 5px 5px 0 0;
 }
-.mounth {
+.month {
     text-align: center;
     font-size: 14px;
     font-weight: bold;
@@ -60,20 +60,21 @@ div.number:hover {
 div.number:not(:hover) .data {
     color:  #000000ba;
 }
-div.number:not(:hover) .mounth {
+div.number:not(:hover) .month {
     color:  #808080b3;
 }
-.conteiner {
+.main-content {
     background-color: #8080801f;
     height: 100vh;
+    padding-left: 17px;
+    padding-right: 17px;
 }
-.content-1 {
+.comteiner-1{
     width: 100%;
     height: 48px;
     display: flex;
     flex-direction: row;
     align-items:  flex-end;
-    padding-left: 12px;
 }
 .text {
     font-size: 14px;
@@ -90,7 +91,7 @@ div.number:not(:hover) .mounth {
     color: #000000ba;
     margin: 10px;
 }
-.title-top_mounth {
+.title-top_month {
     font-size: 15px;
     color: #000000ba;
     font-weight: bold;
@@ -99,7 +100,56 @@ div.number:not(:hover) .mounth {
     flex-direction: row;
     height: 25px;
 }
-.title-top_mounth span {
+.title-top_month span {
     font-size: 27px;
     color: #000000ba;
+}
+.comteiner-2 {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 8%;
+    margin-top: 15px;
+    border-radius: 6px;
+    overflow: hidden;
+}
+.line-2 {
+    background-color: red;
+    height: 100%;
+    width: 1%;
+}
+.content-2 {
+    background-color: white;
+    height: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 12px;
+    padding-right: 12px;
+}
+.checkbox .checked{
+    display: none;
+}
+.checkbox input:checked .checked {
+    display: inline;
+}
+.checkbox input:checked .unchecked {
+    display: none;
+}
+.checkbox span {
+    font-size: 22px;
+    color: green;
+}
+.deal-number {
+    font-size: 15px;
+    font-weight: bold;
+    color: #808080b3;;
+}
+.deal-text {
+    color: #000000ba;
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 2px;
 }
