--- a/src/l.gutorova/homework_8/Homework_8.css
+++ b/src/l.gutorova/homework_8/Homework_8.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: sans-serif;
+    box-sizing: border-box;
 }
 .common-1 {
     width: 100vw;
@@ -9,13 +10,14 @@ body {
     background-size: cover;
     position: relative;
     background-position: center;
+
 }
 .conteiner-1 {
     display: flex;
     flex-direction: row;
     background: url(./picture/Yandex_Go_logo.png);
-    width: 190px;
-    height: 60px;
+    width: 150px;
+    height: 47px;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -23,61 +25,70 @@ body {
     top: 20px;
     
 }
-.conteiner-1  .a_1 {
+.conteiner-1  .link_1 {
     width: 70%;
     height: 100%;
 }
-.conteiner-1  .a_2{
+.conteiner-1  .link_2{
     width: 30%;
     height: 100%;
 }
 .conteiner-2 {
     background-color: white;
     border-radius: 82px;
-    width: 570px;
-    height: 560px;
+    width: 34vw;
+    height: 72vh;
     position: absolute;
-    right: 250px;
-    bottom: 140px;
-    padding-left: 50px;
+    right: 160px;
+    bottom: 65px;
+    padding-left: 46px;
+    z-index: 1;
 }
 .text-1{
-    font-size: 62px;
-    font-weight: 900;
+    font-size: 46px;
+    font-weight: bold;
     margin-top: 40px;
+    line-height: 54px;
 }
 .text-2{
-    font-size: 20px;
-    margin-top: 42px;
+    font-size: 18px;
+    margin-top: 26px;
+    line-height: 28px
 }
-.a_3 {
+.link_3 {
     border: solid 2px black;
-    width: 275px;
-    height: 70px;
+    width: 270px;
+    height: 60px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 42px;
+    margin-top: 30px;
     border-radius: 48px;
 }
-.a_3 a {
+.link_3 .link_bottom {
+    width: 100%;
+    height: 100%;
+    line-height: 56px;
+    text-align: center;
     font-size: 20px;
     text-decoration: none;
     color: black;
     font-weight: bold;
 }
+.link_bottom:hover .link_3{
+    background-color: black;
+
+}
 .common-2 {
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     background-color: white;
     position: relative;
 }
 .conteiner-3 {
     background-color: #e0cd2c;
-    width: 1300px;
+    width: 70vw;
     height: 1000px;
     border-radius: 76px 76px 76px 76px;
     position: absolute;
     left: 70px;
-    top: 20px;
+    top: -185px;
 }
