--- a/src/l.gutorova/homework_8/Homework_8.css
+++ b/src/l.gutorova/homework_8/Homework_8.css
@@ -62,8 +62,9 @@ body {
     display: flex;
     margin-top: 30px;
     border-radius: 48px;
+    overflow: hidden;
 }
-.link_3 .link_bottom {
+.link_3 a {
     width: 100%;
     height: 100%;
     line-height: 56px;
@@ -73,22 +74,42 @@ body {
     color: black;
     font-weight: bold;
 }
-.link_bottom:hover .link_3{
+div.link_3:hover a{
+    color: white;
     background-color: black;
-
 }
 .common-2 {
     width: 100vw;
     height: 100vh;
     background-color: white;
-    position: relative;
 }
 .conteiner-3 {
-    background-color: #e0cd2c;
+    background-color: #ffde40;
     width: 70vw;
-    height: 1000px;
+    height: 110vh;
     border-radius: 76px 76px 76px 76px;
-    position: absolute;
+    position: relative;
     left: 70px;
     top: -185px;
+}
+.conteiner-4 {
+    width: 60%;
+    height: 50%;
+    position: relative;
+    left: 54px;
+    top: 285px;
+}
+.link_4 {
+    width: 88px;
+    height: 38px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+.link_4 a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
 }
