--- a/src/l.gutorova/homework_8/Homework_8.css
+++ b/src/l.gutorova/homework_8/Homework_8.css
@@ -82,7 +82,9 @@ div.link_3:hover a{
     color: white;
     background-color: black;
 }
-.common-2, .common-3, .common-4 {
+.common-2, 
+.common-3,
+.common-4 {
     width: 100vw;
     height: 100vh;
     background-color: white;
@@ -160,7 +162,15 @@ div.animation:hover .arrow {
         width: 44vw;
         height: 70vh;
     }
+    .text-animation {
+        font-size: 14px;
+    }
+    .media.conteiner-11{
+        right: 160px;
+        height: 58vh;
+    }
 }
+
 .conteiner-7 {
     width: 40vw;
     height: 75vh;
@@ -222,4 +232,75 @@ div.animation:hover .arrow {
  width: 320px;
  height: 40px;
  margin-top: 34px;
+}
+.conteiner-11 {
+    width: 26vw;
+    height: 72vh;
+    position: absolute;
+    right: 280px;
+    bottom: 0px;
+    display: inline;
+    background: url(./picture/pic4.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    z-index: 2;
+}
+.conteiner-12 {
+    width: 81vw;
+    height: 15vh;
+    border-radius: 70px 70px 0px 0px;
+    background-color:  #ffde40;
+    position: absolute;
+    bottom: 0px;
+    left: 50px;
+    z-index: 1;
+}
+.conteiner-13 {
+    width: 50vw;
+    height: 27vh;
+    border-radius: 70px 70px 0px 0px;
+    background-color:  black;
+    position: absolute;
+    bottom: 0px;
+    right: 50px;
+}
+.common-5 {
+    width: calc (100vw-200px);
+    height: 100vh;
+    background-color: white;
+    position: relative;
+    padding-left: 100px;
+    padding-right: 100px;
+} 
+.common-5_top{
+    width: 100%;
+    height: 16%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.top-text {
+    width: 150px;
+    height: 30px;
+    font-size: 13px;
+    color: black;
+}
+.top-icon {
+    width: 150px;
+    height: 66px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.icon {
+    width: 33%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon img {
+    width: 50px;
+    opacity: 0.3;
 }
