added "grid-template-columns: repeat(auto-fill, minmax(150px, 1fr))" according to my master's will

--- a/src/d.barukin/homework_7/css/styles_grid.css
+++ b/src/d.barukin/homework_7/css/styles_grid.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: grid;
     grid-gap: 1%;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 19%));
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     grid-template-rows: auto;
 }
 .body > div {
