--- a/src/l.gutorova/homework_9/Task_4/Task_4.css
+++ b/src/l.gutorova/homework_9/Task_4/Task_4.css
@@ -1,14 +1,14 @@
 .common {
     width: 200px;
     height: 200px;
-    margin-top: 100px;
-    margin-left: 50%;
+    top: 100px;
+    left: 50%;
     transform: translateX(-50%);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    position: relative;
 }
 .text {
     position: absolute;
@@ -19,18 +19,27 @@
 .cub {
     width: 50px;
     height: 50px;
+    position: absolute;
 }
 .red{
     background-color: red; 
+    left: 50px;
+    top: 50px;
 }
 .yellow {
     background-color: yellow;
+    left: 100px;
+    top: 50px;
 }
 .blue {
     background-color: blue;
+    left: 50px;
+    top: 100px;
 }
 .green {
     background-color: green;
+    left: 100px;
+    top: 100px;
 }
 .common:hover .red {
     animation: new1 1.3s ease-in-out forwards;
@@ -41,30 +50,40 @@
 .common:hover .blue {
     animation: new3 1.3s ease-in-out forwards;
 }
+.common:hover .green {
+    animation: new4 1.3s ease-in-out forwards;
+}
 @keyframes new1 {
-    from {
-        transform: rotate(0);
-    }
     to {
         transform: rotate(90deg);
-        margin-left: -50px;
+        left: 0px;
+        top: 50px;
+       
     }
 }
 @keyframes new2 {
-    from {
-        transform: rotate(0);
-    }
     to {
         transform: rotate(90deg);
-        margin-top: -50px;
+        top: 0px;
+        left: 100px;
     }
 }
 @keyframes new3 {
-    from {
-        transform: rotate(0);
-    }
     to {
         transform: rotate(90deg);
-        margin-bottom: -50px;
+        left: 50px;
+        top: 150px;
+       
     }
 }
+@keyframes new4 {
+    to {
+        transform: rotate(90deg);
+        left: 150px;
+        top: 100px;
+       
+    }
+}
+
+
+
