--- a/src/l.gutorova/homework_9/Task_1/Task_1.css
+++ b/src/l.gutorova/homework_9/Task_1/Task_1.css
@@ -12,6 +12,7 @@
 .conteiner-2 {
     width: 150px;
     height: 50px;
+    margin-left: -20px;
 }
 .bid_circle {
     width: 100px;
@@ -20,7 +21,7 @@
     border-radius: 50%;  
 }
 .conteiner-1:hover {
-    animation: new1 1s linear 0.5s forwards;
+    animation: new1 1s ease-in-out 0.2s forwards;
 }
 @keyframes new1 {
     from {
@@ -32,7 +33,7 @@
     
 }
 .conteiner-1:hover ~ .conteiner-2 {
-    animation: new2 1.3s ease-out 1.5s forwards;
+    animation: new2 1.3s ease-out 0.9s forwards;
 }
 @keyframes new2 {
     from {
